# learning

7-more-languages-in-7-weeks/5-julia/day-1/: README.md
7-more-languages-in-7-weeks/5-julia/day-2/: README.md
7-more-languages-in-7-weeks/5-julia/day-3/: Codec.jl  README.md
7-more-languages-in-7-weeks/6-kanren/: README.md
7-more-languages-in-7-weeks/6-kanren/day-1/: Cargo.toml
7-more-languages-in-7-weeks/6-kanren/day-1/src/: main.rs
7-more-languages-in-7-weeks/6-kanren/day-2/: Cargo.toml
architecture-patterns-with-python/: model.py  orm.py  test_allocate.py  test_orm.py  test_repository.py
architecture-patterns-with-python/project/: config.py  conftest.py  flask_app.py  orm.py  repository.py  services.py  test_api.py  test_services.py
high-performance-python/chapter_01/: julia.py  julia1_lineprofiler.py  julia1_lineprofiler2.py  julia1_memoryprofiler.py  julia1_raw.py  julia1_raw2.py  profile.stats
high-performance-python/chapter_04/: lookup_performance_comparison.py
high-performance-python/chapter_06/: diffusion_numpy_inplace.py  diffusion_numpy_numexpr.py  diffusion_numpy_roll.py  diffusion_numpy_roll_inplace.py  diffusion_pure_python.py  diffusion_pure_python_prealloc.py
high-performance-python/chapter_07/: cythonfn.html  cythonfn.pyx  diffusion_pytorch.py  julia_cython.py  julia_numba.py  setup.py
high-performance-python/chapter_09/: queues.py
high-performance-python/chapter_10/: estimate_pi_on_ipython_cluster.py
high-performance-python/chapter_11/: kminvalues.py  loglogcounter.py  morris_counter.py
python-tdd-book/: README.md
(+43 files in other folders)
