[package]
name = "day-1"
version = "0.1.0"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-kanren = "0.3.2" #{ path = "../../../../miniKANREN/rust-canonical"}
